--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,8 @@
+version: '3.4'
+
 services:
-  strava_dashboard:
-    build: .
-    ports:
-      - "8050:8050"
-    volumes:
-      - .:/app
-    environment:
-      - CLIENT_ID=${CLIENT_ID}
-      - CLIENT_SECRET=${CLIENT_SECRET}
-      - REFRESH_TOKEN=${REFRESH_TOKEN}
-    command: python app.py
+  stravawebapp:
+    image: stravawebapp
+    build:
+      context: .
+      dockerfile: ./Dockerfile
